[gd_scene load_steps=2 format=3 uid="uid://cen8goii1hogk"]

<<<<<<< HEAD
[ext_resource type="Script" uid="uid://c5yk80ouhgy3c" path="res://scripts/pause_menu_1.gd" id="1_dafxb"]
=======
[ext_resource type="Script" path="res://scripts/pause_menu_1.gd" id="1_dafxb"]
>>>>>>> e9d62d48d7ccede54554636600ea5bdff6ff90e5

[node name="PauseMenu1" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dafxb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0.25098, 0.25098, 0.705882)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.5
offset_top = -152.0
offset_right = 189.5
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Paused"

[node name="Resume" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="Restart" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Restart"

[node name="Exit" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit"

[connection signal="pressed" from="GridContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="GridContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GridContainer/Exit" to="." method="_on_exit_pressed"]
